--- a/src/components/Users/UserHeader/UserHeader.css
+++ b/src/components/Users/UserHeader/UserHeader.css
@@ -41,7 +41,7 @@
     font-size: 1.875rem;
     font-weight: 700;
     color: white;
-    margin: 0;
+    margin: 0 0 0 20px;
     flex: 1;
   }
   
