--- a/src/components/common/Sidebar/Sidebar.css
+++ b/src/components/common/Sidebar/Sidebar.css
@@ -50,7 +50,10 @@
     }
     
     .sidebar-toggle-btn.sidebar-collapsed {
-      left: 1rem;
+      left: 2.5rem;
+      background: none !important;
+      border: none !important;
+
     }
   }
   
